install gulp-gh-pages and deploy task

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "axios": "^0.9.1",
+    "gulp-gh-pages": "^0.5.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-router": "^2.4.0",
-    "axios": "^0.9.1"
+    "react-router": "^2.4.0"
   },
   "devDependencies": {
     "react-addons-test-utils": "^15.0.1",
@@ -58,7 +59,8 @@
     "serve": "gulp serve",
     "serve:dist": "gulp serve:dist",
     "test": "gulp test",
-    "test:auto": "gulp test:auto"
+    "test:auto": "gulp test:auto",
+    "deploy": "gulp deploy"
   },
   "eslintConfig": {
     "root": true,
